--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/ArcadiaBuild.loader.js";
+      var loaderUrl = buildUrl + "/FrameTestNinja.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ArcadiaBuild.data.unityweb",
-        frameworkUrl: buildUrl + "/ArcadiaBuild.framework.js.unityweb",
-        codeUrl: buildUrl + "/ArcadiaBuild.wasm.unityweb",
+        dataUrl: buildUrl + "/FrameTestNinja.data.unityweb",
+        frameworkUrl: buildUrl + "/FrameTestNinja.framework.js.unityweb",
+        codeUrl: buildUrl + "/FrameTestNinja.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "ninja",
