--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
             progressBarFull.style.width = 100 * progress + "%";
-            progressBarFull.style.transform = `rotate(${360  progress
-        }deg)`;
+              progressBarFull.style.transform = `rotate(${360 progress}deg)`;
               }).then((unityInstance) => {
                 loadingBar.style.display = "none";
                 fullscreenButton.onclick = () => {
