--- a/index.html
+++ b/index.html
@@ -98,14 +98,24 @@
         canvas.style.height = "600px";
       }
 
-      loadingBar.style.display = "block";
+        loadingBar.style.display = "block";
+        const progressBarEmpty = document.getElementById('unity-progress-bar-empty');
+        const progressBarFull = document.getElementById('unity-progress-bar-full');
+
+        function rotateElement(element, angle) {
+            element.style.transform = `rotate(${angle}deg)`;
+        }
+
 
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
             progressBarFull.style.width = 100 * progress + "%";
-              progressBarFull.style.transform = `rotate(${360 progress}deg)`;
+            if (progressBarEmpty != null)
+                rotateElement(progressBarEmpty, 180);
+            if (progressBarFull != null)
+            rotateElement(progressBarFull,360);
               }).then((unityInstance) => {
                 loadingBar.style.display = "none";
                 fullscreenButton.onclick = () => {
