--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         loadingBar.style.display = "block";
         const progressBarEmpty = document.getElementById('unity-progress-bar-empty');
-        const progressBarFull = document.getElementById('unity-progress-bar-full');
+       // const progressBarFull = document.getElementById('unity-progress-bar-full');
 
         function rotateElement(element, angle) {
             element.style.transform = `rotate(${angle}deg)`;
@@ -112,8 +112,8 @@
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
             progressBarFull.style.width = 100 * progress + "%";
-            if (progressBarEmpty != null)
-                rotateElement(progressBarEmpty, 180);
+            //if (progressBarEmpty != null)
+            //    rotateElement(progressBarEmpty, 180);
             if (progressBarFull != null)
             rotateElement(progressBarFull,360);
               }).then((unityInstance) => {
