--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
-           progressBarFull.style.width = 100 * progress + "%"; 
+           progressBarFull.style.width = 100 +"%"; 
 
             updateRotation();
               }).then((unityInstance) => {
