--- a/index.html
+++ b/index.html
@@ -101,17 +101,26 @@
         loadingBar.style.display = "block";
     
         let currentAngle = 0;
+        let startTime = null;
+        const rotationSpeed = 360;  
 
         function rotateElement(element, angle) {
             element.style.transform = `rotate(${angle}deg)`;
+        } 
+        function updateRotation() {
+            if (!startTime) {
+                startTime = performance.now();
+            }
+
+            const elapsedTime = performance.now() - startTime;
+            const angle = (elapsedTime / 1000) * rotationSpeed;  
+            currentAngle = angle % 360;  
+            rotateElement(progressBarFull, currentAngle);
+
+            requestAnimationFrame(updateRotation);  
         }
 
-        function updateRotation() {
-            if (currentAngle == 360) { currentAngle = 0; }
-            currentAngle += 0.1; 
-            rotateElement(progressBarFull, currentAngle); 
-            requestAnimationFrame(updateRotation);
-        }
+
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
