--- a/index.html
+++ b/index.html
@@ -3,23 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Coparcadio</title>
+    <title>Unity WebGL Player | ninja</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-
     <style>
         body {
             /* Убираем скролл */
             overflow: hidden;
         }
     </style>
-
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="https://sad.adsgram.ai/js/sad.min.js"></script>
-
-    <script type="text/javascript">
-        const AdController = window.Adsgram.init({ blockId: "1905" });
-    </script>
 </head>
 <body>
     <div id="unity-container" style="position: absolute; width: 100%; height: 100%; left: 0%; top: 0%;">
@@ -31,16 +23,19 @@
             </div>
         </div>
         <div id="unity-warning"> </div>
+        <div id="unity-footer">
+            <div id="unity-webgl-logo"></div>
+            <div id="unity-fullscreen-button"></div>
+            <div id="unity-build-title">ninja</div>
+        </div>
     </div>
     <script>
-
-        var telegramApp = window.Telegram.WebApp;
-        var myGameInstance = null;
 
         var container = document.querySelector("#unity-container");
         var canvas = document.querySelector("#unity-canvas");
         var loadingBar = document.querySelector("#unity-loading-bar");
         var progressBarFull = document.querySelector("#unity-progress-bar-full");
+        var fullscreenButton = document.querySelector("#unity-fullscreen-button");
         var warningBanner = document.querySelector("#unity-warning");
 
         // Shows a temporary message banner/ribbon for a few seconds, or
@@ -68,15 +63,15 @@
         }
 
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/WebClient.loader.js";
+        var loaderUrl = buildUrl + "/FrameTestNinja.loader.js";
         var config = {
-            dataUrl: buildUrl + "/WebClient.data.gz",
-            frameworkUrl: buildUrl + "/WebClient.framework.js.gz",
-            codeUrl: buildUrl + "/WebClient.wasm.gz",
+            dataUrl: buildUrl + "/FrameTestNinja.data.unityweb",
+            frameworkUrl: buildUrl + "/FrameTestNinja.framework.js.unityweb",
+            codeUrl: buildUrl + "/FrameTestNinja.wasm.unityweb",
             streamingAssetsUrl: "StreamingAssets",
-            companyName: "Company",
-            productName: "Coparcadio",
-            productVersion: "1.0",
+            companyName: "DefaultCompany",
+            productName: "ninja",
+            productVersion: "0.1.0",
             showBanner: unityShowBanner,
         };
 
@@ -111,38 +106,16 @@
 
         loadingBar.style.display = "block";
 
-        let currentAngle = 0;
-        let startTime = null;
-        const rotationSpeed = 180;
-
-        function rotateElement(element, angle) {
-            element.style.transform = `rotate(${angle}deg)`;
-        }
-
-        function updateRotation() {
-            if (!startTime) {
-                startTime = performance.now();
-            }
-
-            const elapsedTime = performance.now() - startTime;
-            const angle = (elapsedTime / 1000) * rotationSpeed;
-            currentAngle = angle % 360;
-            rotateElement(progressBarFull, currentAngle);
-
-            requestAnimationFrame(updateRotation);
-        }
-
-
         var script = document.createElement("script");
         script.src = loaderUrl;
         script.onload = () => {
             createUnityInstance(canvas, config, (progress) => {
-                progressBarFull.style.width = 100 + "%";
-                progressBarFull.style.height = 1000 + "%";
-                updateRotation();
+                progressBarFull.style.width = 100 * progress + "%";
             }).then((unityInstance) => {
-                myGameInstance = unityInstance;
                 loadingBar.style.display = "none";
+                fullscreenButton.onclick = () => {
+                    unityInstance.SetFullscreen(1);
+                };
             }).catch((message) => {
                 alert(message);
             });
