--- a/index.html
+++ b/index.html
@@ -101,18 +101,16 @@
         }
 
         loadingBar.style.display = "block";
-
+        var myGameInstance = null;
         var script = document.createElement("script");
         script.src = loaderUrl;
         script.onload = () => {
             createUnityInstance(canvas, config, (progress) => {
                 progressBarFull.style.width = 100 * progress + "%";
             }).then((unityInstance) => {
-           
+                myGameInstance = unityInstance;
                 loadingBar.style.display = "none";
-                fullscreenButton.onclick = () => {
-                    unityInstance.SetFullscreen(1);
-                };
+               
             }).catch((message) => {
                 alert(message);
             });
