--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | ninja</title>
+    <title>Unity WebGL Player | ninja2</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <style>
@@ -57,15 +57,15 @@
         }
 
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/FrameTestNinja.loader.js";
+        var loaderUrl = buildUrl + "/FruitNinj2D.loader.js";
         var config = {
-            dataUrl: buildUrl + "/FrameTestNinja.data.unityweb",
-            frameworkUrl: buildUrl + "/FrameTestNinja.framework.js.unityweb",
-            codeUrl: buildUrl + "/FrameTestNinja.wasm.unityweb",
+            dataUrl: buildUrl + "/FruitNinj2D.data.unityweb",
+            frameworkUrl: buildUrl + "/FruitNinj2D.framework.js.unityweb",
+            codeUrl: buildUrl + "/FruitNinj2D.wasm.unityweb",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "DefaultCompany",
-            productName: "ninja",
-            productVersion: "0.1.0",
+            productName: "ninja2",
+            productVersion: "1.0",
             showBanner: unityShowBanner,
         };
 
