--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
             <div id="unity-logo"></div>
             <div id="unity-progress-bar-empty">
                 <div id="unity-progress-bar-full"></div>
+                <div class="label"></div>
             </div>
         </div>
+
+
         <div id="unity-warning"> </div>
     </div>
     <script>
@@ -117,20 +120,8 @@
 
         document.body.appendChild(script);
 
-        function unitySetLoaderProgressTo(value) {
-            const fill = customLoadingBar.getElementsByClassName("fill")[0];
-            const fillText = customLoadingBar.getElementsByClassName("label")[0];
-
-            fill.animate(
-                [
-                    { width: (value * 100) + "%" }
-                ],
-                {
-                    duration: 300,
-                    fill: "forwards"
-                }
-            );
-
+        function unitySetLoaderProgressTo(value) { 
+            const fillText = customLoadingBar.getElementsByClassName("label")[0]; 
             fillText.textContent = (value * 100).toFixed() + "%";
         }
     </script>
