--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
         <canvas id="unity-canvas" style="position: absolute; width: 100%; height: 100%;"></canvas>
         <div id="unity-loading-bar">
             <div id="unity-logo"></div>
+            <div class="label"></div>
             <div id="unity-progress-bar-empty">
                 <div id="unity-progress-bar-full"></div>
-            </div>
-            <div id="custom-loader"> 
-                <div class="label"></div>
-            </div>
+            </div> 
         </div>
 
 
@@ -36,7 +34,7 @@
         var loadingBar = document.querySelector("#unity-loading-bar");
         var progressBarFull = document.querySelector("#unity-progress-bar-full");
         var warningBanner = document.querySelector("#unity-warning");
-        var customLoadingBar = document.querySelector("#custom-loader");
+        var customLoadingBar = document.querySelector("label");
         // Shows a temporary message banner/ribbon for a few seconds, or
         // a permanent error message on top of the canvas if type=='error'.
         // If type=='warning', a yellow highlight color is used.
